istio.service-entry.yaml
# istio/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-services
spec:
  hosts:
  - "*.googleapis.com"
  - "*.google.com"
  - "*.microsoftonline.com"
  - "*.github.com"
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
